<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.namalliv.software.aprendisaje.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="163dp"
        tools:layout_editor_absoluteY="7dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/tutoriales_blanco"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="45dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/programas_blanco"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="47dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/preguntas_blanco"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="197dp" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/pruebas_blanco"
        tools:layout_editor_absoluteX="217dp"
        tools:layout_editor_absoluteY="199dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ajuste_blanco"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="358dp" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="150dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/compartir_blanco"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="358dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutoriales"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="155dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programas"
        tools:layout_editor_absoluteX="261dp"
        tools:layout_editor_absoluteY="155dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preguntas"
        tools:layout_editor_absoluteX="58dp"
        tools:layout_editor_absoluteY="311dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pruebas"
        tools:layout_editor_absoluteX="261dp"
        tools:layout_editor_absoluteY="311dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajustes"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="469dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compartir"
        tools:layout_editor_absoluteX="261dp"
        tools:layout_editor_absoluteY="469dp" />
</android.support.constraint.ConstraintLayout>
