<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/preguntas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:id="@+id/textView3"
        android:layout_marginEnd="22dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView4"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.405"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView5" />

    <TextView
        android:text="@string/pruebas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:id="@+id/textView4"
        android:layout_marginRight="56dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView6" />

    <TextView
        android:text="@string/ajustes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:id="@+id/textView5"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView6"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.276"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="174dp"
        android:layout_height="100dp"
        android:layout_marginBottom="13dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="openTutorial"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageView4"
        app:srcCompat="@drawable/preguntas_blanco" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="174dp"
        android:layout_height="100dp"
        android:layout_marginRight="9dp"
        android:onClick="openTutorial"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/pruebas_blanco"
        android:layout_marginBottom="13dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="174dp"
        android:layout_height="100dp"
        android:onClick="openTutorial"
        app:srcCompat="@drawable/compartir_blanco"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="174dp"
        android:layout_height="100dp"
        android:onClick="openTutorial"
        app:srcCompat="@drawable/programas_blanco"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="81dp"
        android:layout_marginRight="9dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:text="@string/tutoriales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:id="@+id/textView1"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/textView2"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.435" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="174dp"
        android:layout_height="99dp"
        android:onClick="openTutorial"
        app:srcCompat="@drawable/tutoriales_blanco"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="81dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageView2"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:text="@string/programas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:id="@+id/textView2"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        android:layout_marginRight="35dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/compartir"
        android:textSize="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_marginEnd="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="39dp"
        android:layout_marginRight="32dp"
        app:layout_constraintRight_toRightOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="174dp"
        android:layout_height="100dp"
        android:onClick="openTutorial"
        app:srcCompat="@drawable/ajuste_blanco"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/imageView6"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.727" />

    <TextView
        android:text="@string/principal"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:gravity="center"
        android:textSize="24dp"
        android:padding="10dp"
        android:id="@+id/textView7"
        android:background="@android:color/darker_gray"
        tools:textColor="@android:color/holo_red_light"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />
</android.support.constraint.ConstraintLayout>