<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_principal_actividad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.namalliv.software.aprendisaje.PrincipalActividad"
    tools:showIn="@layout/principal_actividad">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preguntas"
        android:textColor="#000"
        android:textSize="24dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView3"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView3"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajustes"
        android:textColor="#000"
        android:textSize="24dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintRight_toRightOf="@+id/imageView5"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.547"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="174dp"
        android:layout_height="81dp"
        android:onClick="openTutorial"
        app:srcCompat="@drawable/tutoriales_blanco"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="21dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutoriales"
        android:textColor="#000"
        android:textSize="24dp"
        android:layout_marginEnd="31dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView1"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView1"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        app:layout_constraintHorizontal_bias="0.882" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="174dp"
        android:layout_height="81dp"
        android:layout_marginEnd="2dp"
        android:onClick="openTutorial"
        app:srcCompat="@drawable/programas_blanco"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="90dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/programas"
        android:textColor="#000"
        android:textSize="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView2"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.625" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pruebas"
        android:textColor="#000"
        android:textSize="24dp"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView4"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.671" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="174dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:onClick="openTutorial"
        app:srcCompat="@drawable/preguntas_blanco"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView1"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.6"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="174dp"
        android:layout_height="81dp"
        android:layout_marginStart="191dp"
        android:onClick="openTutorial"
        app:srcCompat="@drawable/pruebas_blanco"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.875" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="174dp"
        android:layout_height="81dp"
        android:onClick="openTutorial"
        app:srcCompat="@drawable/ajuste_blanco"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/textView3"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.561" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="174dp"
        android:layout_height="81dp"
        android:onClick="openTutorial"
        app:srcCompat="@drawable/compartir_blanco"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/textView4"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.436" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compartir"
        android:textColor="#000"
        android:textSize="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView6"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/imageView6"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/aprende"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/principal"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />


</android.support.constraint.ConstraintLayout>
